<resources>
    <string name="app_name">贵圈</string>
    <string name="Silent">一键静音</string>
    <string name="action_settings">settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login_activity">Login_activity</string>
    <string name="Filter">筛选</string>
    <string name="shit_back">吐槽</string>
    <string name="shit_public">发布吐槽</string>
    <string name="public_a">发布</string>
    <string name="meet_back">约会</string>
    <string name="meet_public">开始约会</string>
    <string name="secret_back">秘密</string>
    <string name="secret_public">发布秘密</string>
    <string name="nearby_user">附近用户</string>
    <string name="nearby_circle">附近圈子</string>
    <string name="found_circle">发现圈子</string>
    <string name="found_user">发现用户</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="sd_card_does_not_exist">sdcard不存在</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="title_activity_come">ComeActivity</string>
    <string name="title_activity_system_settings">SystemSettingsActivity</string>
    <string name="title_activity_message_settings">MessageSettingsActivity</string>
    <string name="title_activity_cloaking_settings">CloakingSettingsActivity</string>
    <string name="login_name">请输入手机号码或邮箱</string>
    <string name="login_password">输入登录密码</string>
    <string name="fraget_password">忘记密码？</string>
    <string name="login_login">登        录</string>
    <string name="register_register">注册</string>
    <string name="phone_register">手机号注册</string>
    <string name="register_phone">手机号</string>
    <string name="register_password">密 码</string>
    <string name="new_password">新密码</string>
    <string name="modify_password">修改密码</string>
    <string name="password_confirm">密码确认</string>
    <string name="register_code">验证码</string>
    <string name="industry_type">行业类别</string>
    <string name="pro_type">职业类别</string>
    <string name="login_register">注册新的账号</string>
    <string name="login_buttom">北京贵圈科技有限公司</string>
    <string name="fill_information">填写信息</string>
    <string name="fill_nickname">昵称</string>
    <string name="fill_sex">性别</string>
    <string name="fill_birthday">生日</string>
    <string name="fill_constellation">星座</string>
    <string name="fill_next">下一步</string>
    <string name="post_industry">所属行业</string>
    <string name="post_category">职位类别</string>
    <string name="industry_category">行业类别</string>
    <string name="car_attestation">车主认证</string>
    <string name="you_car">你是否购车：</string>
    <string name="car_information">车辆信息:</string>
    <string name="car_brand">品牌:</string>
    <string name="car_model">型号:</string>
    <string name="car_configuration">配置:</string>
    <string name="house_attestation">房产认证</string>
    <string name="you_house">你是否购房：</string>
    <string name="house_information">房产信息:</string>
    <string name="house_city">城市:</string>
    <string name="house_region">区域：</string>
    <string name="house_configuration">配置</string>
    <string name="shen_height">身高</string>
    <string name="ti_zhong">体重</string>
    <string name="information_attestation">信息认证</string>
    <string name="zhaopian_attestation">选择照片认证</string>
    <string name="comitie_btn">提交审核</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_qfind_pwd">找回密码</string>
    <string name="title_activity_qregist_info">填写信息</string>
    <string name="title_activity_qhome">首页</string>

    <!--即时通信 部分string-->
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="Cant_chat_with_yourself">不能跟自己聊天</string>
    <string name="button_send">发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">附近用户</string>
    <string name="hello_roast_fragment">吐槽</string>
    <string name="hello_roast_detail">吐槽详情</string>
    <string name="hello_message_fragment">消息</string>
    <string name="hello_contact_fragment">联系人</string>
    <string name="hello_me_fragment">我的</string>
    <string name="title_activity_qscreen">筛选</string>
    <string name="title_activity_quser_detail">用户详情</string>
    <string name="title_activity_qcircle_detail">圈子详情</string>
    <string name="title_activity_qcircle_member">圈子成员</string>
    <string name="title_activity_qprofile">我的</string>
    <string name="title_activity_qsystem_set">系统设置</string>
    <string name="title_activity_qmsg_set">消息设置</string>
    <string name="title_activity_qpwd_set">密码设置</string>
    <string name="title_activity_qinvisible_set">隐身设置</string>
    <string name="title_activity_qblack_list">黑名单</string>
    <string name="title_activity_qfeedback">意见反馈</string>
    <string name="title_activity_qvisitor_list">他们来过</string>
    <string name="exit_app">确定要退出贵圈</string>
    <string name="title_activity_qstart">启动页</string>
    <string name="title_activity_publish">发布</string>
    <string name="title_activity_qadd_friend">添加好友</string>
    <string name="title_activity_qadd_group">加入群组</string>
    <string name="title_activity_qcreate_group">创建群组</string>
    <string name="title_activity_qmsg_detail">消息页</string>
    <string name="title_activity_qcircle_photos">圈子相册</string>
    <string name="title_activity_qregist_industry">所属行业</string>
    <string name="title_activity_qregist_certify">信息认证</string>
    <string name="title_activity_qregist">手机号注册</string>
    <string name="title_activity_qregist_car">车主认领</string>
    <string name="title_activity_qmap_select">选择地点</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="title_activity_qself_modify">QSelfModifyActivity</string>
    <string name="title_activity_qedit_photo">编辑头像</string>
</resources>
