<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.xj.guanquan.activity.user.QFindPwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="75dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_13_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone" />

        <EditText
            android:id="@+id/phoneText"
            style="@style/text_13_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_13_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/newPwdText"
            style="@style/text_13_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="textPassword" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_13_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_confirm" />

        <EditText
            android:id="@+id/confirmPwdText"
            style="@style/text_13_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="textPassword" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_13_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_code" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/sendSms"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/send_msg_button_seletor" />

            <EditText
                android:id="@+id/codeText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/sendSms"
                android:background="@null" />


        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color" />

    <Button
        android:id="@+id/login_btn"
        style="@style/text_16_black"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="73dp"
        android:background="@drawable/login_button_seletor"
        android:text="@string/modify_password" />

</LinearLayout>
