<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context="com.xj.guanquan.activity.user.QFindPwdActivity">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/avatar"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="33dp"
            fresco:placeholderImage="@mipmap/default_head_img"
            fresco:roundAsCircle="true">

        </com.facebook.drawee.view.SimpleDraweeView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_nickname" />

            <EditText
                android:id="@+id/nickNameText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_sex" />

            <Button
                android:id="@+id/maleButton"
                android:layout_width="49dp"
                android:layout_height="28dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/male_button_selector" />

            <Button
                android:id="@+id/femaleButton"
                android:layout_width="49dp"
                android:layout_height="28dp"
                android:layout_marginLeft="66dp"
                android:background="@drawable/female_button_selector" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_birthday" />

            <EditText
                android:id="@+id/birthdayText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_constellation" />

            <EditText
                android:id="@+id/starText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <Button
            android:id="@+id/nextStep"
            style="@style/text_16_black"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="49dp"
            android:background="@drawable/login_button_seletor"
            android:text="@string/fill_next" />

    </LinearLayout>

</ScrollView>