<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_title"
    android:scrollbars="none"
    tools:context="com.xj.guanquan.activity.user.QRegistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="75dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_phone" />

            <EditText
                android:id="@+id/phoneText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_password" />

            <EditText
                android:id="@+id/pwdText"
                style="@style/text_13_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:gravity="center"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_13_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_code" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/sendSms"
                    android:layout_width="81dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/send_msg_button_seletor"
                    android:onClick="onClick" />

                <EditText
                    android:id="@+id/codeText"
                    style="@style/text_13_white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/sendSms"
                    android:background="@null"
                    android:gravity="center" />


            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/view_color" />

        <Button
            android:id="@+id/nextStep"
            style="@style/text_16_black"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:background="@drawable/login_button_seletor"
            android:onClick="onClick"
            android:text="@string/register_register" />

    </LinearLayout>

</ScrollView>
